  developed. (N.B this is separate to the inequality constraints that can
  be made during curvefitting using the NonLinearConstraint machinery).
- Add a Parratt recursion for calculating reflectivity, it seems to be a
  little faster.
- Ported the pymc wrapper from pymc3 --> pymc (v4), which was released in
  Jun2022.
- added sequence_to_parameters function.
- added LipidLeaflet.make_constraint.

0.1.31
------
- Amend setup.py package discovery
- Change the manual beam finder box to green
- When a Parameters object contains a _UnaryOp or _BinaryOp the dependencies
  of those objects are queried for varying parameters when asking for
  Parameters.varying_parameters()

0.1.32
-------
- event mode reduction for SPZ
- Display SLD profile for first structure in MixedReflectModel
- Github: changed the default branch from master to main. This is done to
  match other repositories behaviour and to reduce cognitive load.
- Added a Parameter.corner method to plot the posterior distribution for a
  given Parameter.
- Fixed a bug in MixedSlab

0.1.33
------
- upgrade to PyQt6. PyQt6 is currently only available as a wheel from PyPI,
  to be installed by e.g. pip. There are currently no conda packages for PyQt6.
  PyQt6 enables the gui to be used on macosx_arm64, there are no PyQt5 wheels
  available on that platform.
- further modification to use qtpy. qtpy is a shim that allows either
  PyQt6 or Pyside6 to be used to run the refnx GUI. qtpy is a new dependency
  for running the GUI.
- add Objective._generate_generative_mcmc to yield fit curves corresponding
  to MCMC samples.
- add Structure._generate_sld_profile_mcmc to yield sld profiles corresponding
  to MCMC samples.

0.1.34
------
- Fix bug in ManualBeamFinder
- Fix bug in refnx GUI regarding checkbox selection.

0.1.35
------
- only extract requested keys from catalogue
- enable cython3 operations
- change install docs to recommend use of refnx[all]